--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.12",
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.14.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.1",
     "next": "^13.0.6",
