--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -25,7 +26,9 @@
     "zustand": "^4.3.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.2.3",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.2.3",
     "postcss": "^8.4.21",
