--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.24.12",
     "@wagmi/chains": "^0.2.9",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "ethers": "^5.7.2",
     "framer-motion": "^7.10.3",
     "moment": "^2.29.4",
     "next": "^13.2.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
+    "tailwind-merge": "^1.10.0",
     "wagmi": "^0.9.6",
     "zustand": "^4.3.5"
   },
