--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:COkNwPftv5WhuVRZ@db.plmimrmmtcjracjdjbdt.supabase.co:5432/postgres"
+DATABASE_URL="postgres://postgres:CmhDuwWBp4iqZfhj@db.ymudtpspkdopgzrtzevt.supabase.co:5432/postgres"
 # SHADOW_DATABASE_URL="postgres://postgres:COkNwPftv5WhuVRZ@db.plmimrmmtcjracjdjbdt.supabase.co:6543/postgres"
