--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^7.10.3",
     "moment": "^2.29.4",
     "next": "^13.2.3",
+    "next-auth": "^4.21.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
