--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "plugins": ["simple-import-sort"],
-  "rules": {
-    // increase the severity of rules so they are auto-fixable
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
-  }
+  "extends": ["next/core-web-vitals"]
 }
