--- a/package.json
+++ b/package.json
@@ -10,37 +10,43 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^5.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.24.12",
+    "@tanstack/react-table": "^8.9.1",
     "@wagmi/chains": "^0.2.9",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "class-variance-authority": "^0.4.0",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "ethers": "^5.7.2",
-    "framer-motion": "^7.10.3",
+    "framer-motion": "^10.12.22",
     "moment": "^2.29.4",
     "next": "^13.2.3",
     "next-auth": "^4.21.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-spinners": "^0.13.8",
+    "swiper": "^10.0.4",
     "tailwind-merge": "^1.10.0",
-    "wagmi": "^0.9.6",
+    "wagmi": "^0.12.19",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@next/bundle-analyzer": "^13.2.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
-    "eslint": "8.25.0",
+    "eslint": "^8.45.0",
     "eslint-config-next": "^13.2.3",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.3",
-    "prisma": "^4.11.0",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.2.7"
   }
 }
