--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^10.12.22",
     "moment": "^2.29.4",
     "next": "^13.2.3",
-    "next-auth": "^4.21.1",
+    "next-auth": "4.22.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -46,7 +46,7 @@
     "eslint-config-next": "^13.2.3",
     "postcss": "^8.4.21",
     "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier-plugin-tailwindcss": "^0.5.2",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.2.7"
   }
