--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.24.12",
     "@tanstack/react-table": "^8.9.1",
-    "@wagmi/chains": "^0.2.9",
+    "@wagmi/chains": "^1.7.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
-    "class-variance-authority": "^0.4.0",
     "clsx": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "framer-motion": "^10.12.22",
     "moment": "^2.29.4",
     "next": "^13.2.3",
-    "next-auth": "4.22.1",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -33,7 +32,7 @@
     "react-spinners": "^0.13.8",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.10.0",
-    "wagmi": "^0.12.19",
+    "wagmi": "^1.3.10",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
