--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@rainbow-me/rainbowkit": "^1.1.1",
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.24.12",
     "@tanstack/react-table": "^8.9.1",
+    "@types/node": "^20.8.4",
+    "@types/react-dom": "^18.2.12",
     "@wagmi/chains": "^1.7.0",
     "@wagmi/core": "^1.4.3",
     "axios": "^1.4.0",
@@ -24,7 +27,7 @@
     "ethers": "^6.7.1",
     "framer-motion": "^10.12.22",
     "moment": "^2.29.4",
-    "next": "^13.2.3",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -34,17 +37,19 @@
     "react-spinners": "^0.13.8",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.10.0",
+    "typescript": "^5.2.2",
     "wagmi": "^1.3.10",
+    "zod": "^3.22.4",
     "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@next/bundle-analyzer": "^13.2.3",
-    "@types/react": "^18.2.19",
+    "@types/react": "^18.2.27",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
-    "eslint-config-next": "^13.2.3",
+    "eslint-config-next": "^13.5.4",
     "postcss": "^8.4.21",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2",
