--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@rainbow-me/rainbowkit": "^1.1.1",
-    "@tanstack/react-query": "^4.13.0",
-    "@tanstack/react-query-devtools": "^4.24.12",
+    "@rainbow-me/rainbowkit": "^2.0.1",
+    "@tanstack/react-query": "^5.14.0",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "^20.8.4",
     "@types/react-dom": "^18.2.12",
-    "@wagmi/chains": "^1.7.0",
-    "@wagmi/core": "^1.4.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "clsx": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "ethers": "^6.7.1",
-    "framer-motion": "^10.12.22",
+    "framer-motion": "^11.0.8",
     "moment": "^2.29.4",
-    "next": "^13.5.4",
+    "next": "^14.0.4",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.8.0",
     "react-spinners": "^0.13.8",
-    "swiper": "^10.0.4",
-    "tailwind-merge": "^1.10.0",
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.1.0",
+    "tiny-invariant": "^1.3.3",
     "typescript": "^5.2.2",
-    "wagmi": "^1.3.10",
+    "wagmi": "^2.5.7",
     "zod": "^3.22.4",
     "zustand": "^4.3.5"
   },
