--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "^5.14.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.2.12",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "ethers": "^6.7.1",
